# term-project

./: CMakeLists.txt  README.md
app/: main.cpp
code/: KDTree.cpp  KDTree.h  kdtree.cpp  kdtree.h
tests/: test_hw.cpp
